fix: Use <IdentityBadge/> to fix player name spacing on match results

--- a/src/components/IdentityBadge/IdentityBadge.module.scss
+++ b/src/components/IdentityBadge/IdentityBadge.module.scss
@@ -7,6 +7,10 @@
 
   @include flex.row($gap:  var(--avatar-spacing));
 
+  &[data-flipped="true"] {
+    justify-content: flex-end;
+  }
+
   &_Avatar {
     place-self: center center;
     width: var(--avatar-size);
